# killjoy-notifier-slack

./: Cargo.toml  README.md
.github/actions/prepare-rust/: action.yml
.github/workflows/: ci.yml  release.yml
debian/: com.wangpedersen.KilljoyNotifierSlack1.conf  com.wangpedersen.KilljoyNotifierSlack1.service  killjoy-notifier-slack.service  postinst  slack-notifier.json
src/: main.rs
