[package]
authors = ["Kenneth Wang Pedersen <kenneth@wangpedersen.com>"]
categories = ["command-line-utilities"]
description = "Send slack messages about unit state changes on behalf of killjoy."
edition = "2021"
keywords = ["d-bus", "dbus", "systemd", "unit"]
license = "GPL-3.0-or-later"
name = "killjoy-notifier-slack"
readme = "README.md"
repository = "https://github.com/kennep/killjoy-notifier-slack"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4.7"
dbus = "^0.9.5"
dbus-crossroads = "^0.5.0"
xdg = "^2.4.0"
structopt = "^0.3.25"
anyhow = "^1.0"
serde = { version = "^1.0.117", features = ["derive"] }
serde_json = "^1.0.59"
reqwest = "^0.9.18"
log = "^0.4.14"
env_logger = "^0.9.0"


