[package]
authors = ["Kenneth Wang Pedersen <kenneth@wangpedersen.com>"]
categories = ["command-line-utilities"]
description = "Send slack messages about unit state changes on behalf of killjoy."
edition = "2021"
keywords = ["d-bus", "dbus", "systemd", "unit"]
license = "GPL-3.0-or-later"
name = "killjoy-notifier-slack"
readme = "README.md"
repository = "https://github.com/kennep/killjoy-notifier-slack"
version = "0.2.3"

[dependencies]
dbus = "^0.9.5"
dbus-crossroads = "^0.5.0"
xdg = "^2.5.2"
clap   =  { version = "^4.3.11", features = ["derive", "cargo" ] }
anyhow = "^1.0"
serde = { version = "^1.0.193", features = ["derive"] }
serde_json = "^1.0.59"
reqwest = { version = "^0.12.12", features = ["blocking", "json"] }
log = "^0.4.14"
env_logger = "^0.10.0"

[package.metadata.deb]
extended-description = """
Generate slack notifications on behalf of killjoy.

killjoy is a systemd unit monitoring application. It discovers systemd units and
tracks their states. When a unit changes to a state of interest, killjoy
contacts notifiers. This application is a notifier which, upon being contacted
by killjoy, will post a Slack message using a webhook.
"""
maintainer-scripts = "debian/"
assets = [
    ["target/release/killjoy-notifier-slack", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/killjoy-notifier-slack/", "644"],
    ["debian/slack-notifier.json", "/etc/xdg/killjoy/", "644"],
    ["debian/com.wangpedersen.KilljoyNotifierSlack1.conf", "usr/share/dbus-1/system.d/", "644"],
    ["debian/com.wangpedersen.KilljoyNotifierSlack1.service", "usr/share/dbus-1/system-services/", "644"],
]
conf-files = [
    "/etc/xdg/killjoy/slack-notifier.json"
]

[package.metadata.deb.systemd-units]
start = false
enable = false
